fixed nav on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -589,6 +589,23 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.nav-li {
+  width: 100%;
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+
+.nav-li:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 212 191 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 768px) {
+  .nav-li {
+    padding: 0.5rem;
+  }
+}
+
 .link {
   --tw-text-opacity: 1;
   color: hsl(180 66% 49% / var(--tw-text-opacity));
@@ -602,6 +619,10 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -610,12 +631,20 @@ video {
   position: relative;
 }
 
+.left-\[100\%\] {
+  left: 100%;
+}
+
 .right-2 {
   right: 0.5rem;
 }
 
-.top-\[100px\] {
-  top: 100px;
+.top-12 {
+  top: 3rem;
+}
+
+.top-20 {
+  top: 5rem;
 }
 
 .-order-1 {
@@ -651,12 +680,24 @@ video {
   margin-bottom: 8rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
 }
 
+.mr-auto {
+  margin-right: auto;
+}
+
 .mt-9 {
   margin-top: 2.25rem;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -671,12 +712,24 @@ video {
   display: none;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-\[14px\] {
   height: 14px;
 }
 
 .w-8 {
   width: 2rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .max-w-\[15ch\] {
@@ -712,6 +765,10 @@ video {
 .translate-y-24 {
   --tw-translate-y: 6rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-col {
@@ -774,18 +831,22 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .border-2 {
   border-width: 2px;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-cyan {
   --tw-bg-opacity: 1;
   background-color: hsl(180 66% 49% / var(--tw-bg-opacity));
-}
-
-.bg-emerald-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(167 243 208 / var(--tw-bg-opacity));
 }
 
 .bg-purple-950 {
@@ -803,11 +864,6 @@ video {
   background-color: rgb(45 212 191 / var(--tw-bg-opacity));
 }
 
-.bg-emerald-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(6 78 59 / var(--tw-bg-opacity));
-}
-
 .p-20 {
   padding: 5rem;
 }
@@ -820,9 +876,9 @@ video {
   padding: 2rem;
 }
 
-.px-32 {
-  padding-left: 8rem;
-  padding-right: 8rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-6 {
@@ -858,11 +914,6 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.py-48 {
-  padding-top: 12rem;
-  padding-bottom: 12rem;
 }
 
 .text-center {
@@ -925,6 +976,20 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -984,6 +1049,30 @@ video {
   line-height: 1.75rem;
 }
 
+.navbar::before {
+  position: absolute;
+  top: 0px;
+  right: 0;
+  z-index: -1;
+  display: block;
+  height: 100%;
+  width: 100%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  opacity: .7;
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+@media (min-width: 768px) {
+  .navbar::before {
+    content: var(--tw-content);
+    display: none;
+  }
+}
+
 .card-heading {
   margin-bottom: 1.5rem;
   font-size: 1.25rem;
@@ -1024,6 +1113,19 @@ video {
   background-position: center center;
 }
 
+.active {
+  /* display: flex;
+  flex-direction: column;
+  gap: 0.5rem; */
+  left: 30%;
+  transition: 0.75s ease-in-out;
+}
+
+.hover\:bg-teal-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 212 191 / var(--tw-bg-opacity));
+}
+
 .focus\:border-orange-300:focus {
   --tw-border-opacity: 1;
   border-color: rgb(253 186 116 / var(--tw-border-opacity));
@@ -1057,8 +1159,20 @@ video {
     display: block;
   }
 
+  .md\:inline-block {
+    display: inline-block;
+  }
+
   .md\:flex {
     display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:w-auto {
+    width: auto;
   }
 
   .md\:grid-cols-5 {
@@ -1069,26 +1183,12 @@ video {
     flex-direction: row;
   }
 
-  .md\:justify-end {
-    justify-content: flex-end;
+  .md\:gap-5 {
+    gap: 1.25rem;
   }
 
-  .md\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .md\:bg-none {
-    background-image: none;
-  }
-
-  .md\:p-0 {
-    padding: 0px;
-  }
-
-  .md\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
+  .md\:gap-8 {
+    gap: 2rem;
   }
 
   .md\:text-left {
