--- a/input.css
+++ b/input.css
@@ -15,10 +15,6 @@
     @apply flex justify-between items-center;
   }
 
-  .mobile-overlay {
-    @apply md:flex;
-  }
-
   .hero-heading {
     font-size: clamp(2.75rem, 5.5vw, 3.5rem);
   }
@@ -44,6 +40,10 @@
     @apply px-6 py-2  text-white rounded-lg;
   }
 
+  .nav-li {
+    @apply w-full p-4   md:p-2 rounded-lg hover:bg-teal-400;
+  }
+
   .link {
     @apply text-cyan;
   }
@@ -65,6 +65,10 @@
   @apply p-8 max-w-fit leading-7 mx-auto;
 }
 
+.navbar {
+  @apply before:content-['']  before:w-full before:py-8  before:h-full before:block before:opacity-[.7] before:z-[-1] before:absolute before:top-0 before:right-[0] before:bg-slate-100 md:before:hidden;
+}
+
 .card-heading {
   @apply mb-6 font-bold text-black text-xl;
 }
@@ -83,4 +87,12 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+}
+
+.active {
+  /* display: flex;
+  flex-direction: column;
+  gap: 0.5rem; */
+  left: 30%;
+  transition: 0.75s ease-in-out;
 }
